--- a/content/contents/projects/1.md
+++ b/content/contents/projects/1.md
@@ -15,7 +15,7 @@ My work devided by field.
 
 #### Side projects
 
-- [Radidex - Orderbook based on Scrypto DEX for trading assets on Radix blockchain](https://github.com/rustylabs-tech)
+- [Radidex](https://github.com/rustylabs-tech) - Orderbook based on Scrypto DEX for trading assets on Radix blockchain
 
 ### Cybersecurity
 
