--- a/content/contents/projects/1.md
+++ b/content/contents/projects/1.md
@@ -15,7 +15,7 @@ My work devided by field.
 
 #### Side projects
 
-- [Radidex](https://github.com/rustylabs-tech) - Orderbook based on Scrypto DEX for trading assets on Radix blockchain
+- [Radidex](https://github.com/rustylabs-tech) - Orderbook based on Scrypto DEX for trading assets on Radix blockchain.
 
 ### Cybersecurity
 
@@ -25,4 +25,4 @@ My work devided by field.
 
 ### Visuals
 
-- [DevianArt](https://www.deviantart.com/user6566454565446/gallery)
+- [DevianArt](https://www.deviantart.com/user6566454565446/gallery) - Collection of works based on textToImage generations or vector graphics.
