--- a/content/contents/courses/1.md
+++ b/content/contents/courses/1.md
@@ -4,17 +4,30 @@ date: 2018-11-28T15:14:39+10:00
 weight: 1
 ---
 
-Here is list of courses that I passed on MUNI FI, relevant to Computer Science.
+Here is a list of courses that I passed on MUNI FI, relevant to Computer Science and CyberSecurity.
 
 <!--more-->
+### 4
+
+- BVV03K Cybercrime and Cybersecurity
+- BSSb1103 Security Policy of the Czech Republic
+- IB031 Introduction to Machine Learning
+- IB110 Introduction to Informatics
+- IV130 Pros and Cons of Intelligent Systems
+- PB162 Java
+- PV004 UNIX Course
+- V080 Information security and cryptography 
+- PV276 Seminar on Simulation of Cyber Attacks
+- SB200 Bachelor Internship - Cybersecurity 
+
 ### 3
 
-- ICT Law II
-- Mathematical Foundations of Computer Science
-- Software Engineering I
-- Introduction to DB and IS
-- Applied Information Systems
-- MS Windows Systems Management I
+- BI301K ICT Law II
+- IB000 Mathematical Foundations of Computer Science
+- PB007 Software Engineering I
+- PB168 Introduction to DB and IS
+- PV028 Applied Information Systems
+- PV175 MS Windows Systems Management I
 
 ### 2 
 
